# task_for_forkiteh

./: README.md
src/: main.py  pyproject.toml
src/tests/: conftest.py
